--- a/Extract/Extract.csproj
+++ b/Extract/Extract.csproj
@@ -930,19 +930,19 @@
     <Compile Include="Code\Data\IDataLoader.cs" />
     <Compile Include="Code\Data\MySQL\MySQLDataLoader.cs" />
     <Compile Include="Code\Data\SQL\Loaders\SQLCSVDataLoader.cs" />
-    <Compile Include="Code\Data\SQL\Loaders\SQLDataLoader.cs" />
-    <Compile Include="Code\Data\SQL\SQLDatabaseController.cs" />
+    <Compile Include="Code\Data\SQL\Loaders\SQLBAKDataLoader.cs" />
+    <Compile Include="Code\Data\SQL\SQLServerContext.cs" />
     <Compile Include="Code\Data\SQL\SQLDataController.cs" />
     <Compile Include="Code\Data\SQL\SQLQueryGenerator.cs" />
-    <Compile Include="Code\Factories\DatabaseContextFactory.cs" />
-    <Compile Include="Code\Factories\DataControllerFactory.cs" />
-    <Compile Include="Code\Factories\DataLoaderFactory.cs" />
-    <Compile Include="Code\Factories\SQLDataLoaderFactory.cs" />
-    <Compile Include="Code\Models\ColumnModel.cs" />
-    <Compile Include="Code\Models\DataFile.cs" />
-    <Compile Include="Code\Models\DataModel.cs" />
-    <Compile Include="Code\Models\DataModelController.cs" />
-    <Compile Include="Code\Models\TableModel.cs" />
+    <Compile Include="Code\Data\Factories\DatabaseContextFactory.cs" />
+    <Compile Include="Code\Data\Factories\DataControllerFactory.cs" />
+    <Compile Include="Code\Data\Factories\DataLoaderFactory.cs" />
+    <Compile Include="Code\Data\Factories\SQLDataLoaderFactory.cs" />
+    <Compile Include="Code\Model\ColumnModel.cs" />
+    <Compile Include="Code\Model\DataFile.cs" />
+    <Compile Include="Code\Model\DataModel.cs" />
+    <Compile Include="Code\Model\DataModelFactory.cs" />
+    <Compile Include="Code\Model\TableModel.cs" />
     <Compile Include="Controllers\ExtractController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
